--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,8 @@
     font-family: 'Kanit', sans-serif;
 }
 
+
+/* -----------------------Header / Navbar Section---------------------------------- */
 /* Creates the navbar section */
 header{
 
@@ -52,10 +54,14 @@ h2 a{
     text-decoration: none; /* Gets rid of underline */
 }
 
+header li a:hover{
+
+    text-decoration: underline;
+}
 
 
 
-/* Showcase Section */
+/* -----------------------Showcase Section---------------------------------- */
 .showcase{
 
     background-color: #368BC1;
@@ -89,9 +95,7 @@ h2 a{
 
 
 
-
-
-
+/* -----------------------Portfolio Section---------------------------------- */
 .portfolio{
 
     background-color: white;
@@ -133,12 +137,7 @@ h2 a{
 
 
 
-
-
-
-
-
-
+/* -----------------------About me Section---------------------------------- */
 .about-me{
     background-color: #368BC1;
     height: 670px;
@@ -183,13 +182,11 @@ h2 a{
 
 
 
-
-
-
+/* -----------------------Technologies Section---------------------------------- */
 .technologies{
 
     background-color: #368BC1;
-    height: 670px;
+    height: 500px;
     text-align: center;
     padding: 40px 0;
 }
@@ -201,16 +198,90 @@ h2 a{
     text-decoration: underline;
     color: white;
     text-align: center;
-    padding: 40px 0;
 }
 
 .technologies-items{
 
     display: flex;
     flex-direction: row;
+    margin: 60px 0;
 }
 
 .technologies-items img{
 
-    width: 100%;
+    width: 60%;
+}
+
+
+
+/* -----------------------Contact me Section---------------------------------- */
+.contact{
+
+    background-color: white;
+    height: 400px;
+    text-align: center;
+    padding: 40px 0;
+}
+
+.contact h1{
+
+    font-weight: 800;
+    font-size: 5em;
+    text-decoration: underline;
+    color: #343838;
+}
+
+.contact p{
+
+    font-weight: 500;
+    font-size: 1.5em;
+    color: #343838;
+    margin-top: 8px;
+}
+
+.contact-items{
+
+    display: flex;
+    justify-content: center;
+    max-width: 300px;
+    margin-left: 800px;
+    padding-top: 50px;
+}
+
+.contact-items img{
+
+    width: 70%;
+}
+
+#email:hover{
+
+    opacity: 50%;
+}
+
+#link:hover{
+
+    opacity: 50%;
+}
+
+#github:hover{
+
+    opacity: 50%;
+}
+
+
+
+/* -----------------------Footer---------------------------------- */
+footer{
+
+    background-color:#343838;
+    height: 80px;
+    color: white;
+    text-align: center;
+    font-weight: 500;
+    font-size: 1.2em;
+}
+
+footer p{
+
+    padding-top: 25px;
 }
