--- a/styles.css
+++ b/styles.css
@@ -90,7 +90,7 @@ nav.sticky ul li a{
 
 .hero{
 
-    background: url(images/bg.gif);
+    background: linear-gradient(rgba(0,0,0,0.75), rgba(0,0,0,0.75)), url(images/Glasgow.jpg);
     background-size: cover;
     position: relative;
     height: 100vh;
@@ -203,25 +203,94 @@ span{
     color: white;
 }
 
-.work .content{
+.container{
 
+    width: 1260px;
+    margin: 20px auto;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;  
+    padding-bottom: 50px;
+  }
+  
+  
+  .container .box{
+  
+    position: relative;
+    width: 400px;
+    height: 400px;
+    background-color: green;
+    margin: 10px;
+    box-sizing: border-box;
+    display: inline-block;
+  }
+  
+  
+  .container .box .imgBox{
+  
+    position: relative;
+    overflow: hidden; /* prevents image spilling out of div */
+  }
+  
+  .container .box .imgBox img{
+  
+    height: 400px;
+    width: 400px;
+    transition: 1s;
+    object-fit: cover;
+  }
+  
+  .container .box:hover .imgBox img{
+  
+    transform: scale(1.2);
+  }
+  
+  
+  .container .box .details{
+  
+    position: absolute;
+    top: 10px;
+    bottom: 10px;
+    left: 10px;
+    right: 10px;
+    background-color: rgba(0,0,0,0.8);
+    transform: scaleY(0);
+    transition: 0.5s;
+  }
+  
+  .container .box:hover .details{
+  
+    transform: scaleY(1);
+  }
+  
+  .container .box .details .content{
+  
+    position: absolute;
+    color: white;
+    top: 50%;
+    text-align: center;
+    transform: translateY(-50%);
+    padding: 15px;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    padding-bottom: 40px;
-}
+  }
+  
+  .container .box .details .content h2{
+  
+    margin: 0;
+    padding: 0;
+    font-size: 2em;
+    color: yellow;
+  }
+  
+  .container .box .details .content p{
+  
+    margin: 10px 0;
+    padding: 0;
+    font-size: 1.2em;
+  }
 
-.work .content .workBx{
-
-    /* Adjust img box size and padding*/
-    max-width: 500px;
-    padding: 10px;
-}
-
-.workBx img{
-
-    max-width: 100%;
-}
 
 
 /*-------------------Services Section-------------------*/
